// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Kameleoon's logEvent destination action: all fields 1`] = `
Object {
  "anonymousId": "wNACk[QgaEuFPK",
  "context": Object {
    "testType": "wNACk[QgaEuFPK",
  },
  "event": "wNACk[QgaEuFPK",
  "messageId": "wNACk[QgaEuFPK",
  "properties": Object {
    "kameleoonVisitorCode": "wNACk[QgaEuFPK",
    "testType": "wNACk[QgaEuFPK",
  },
  "timestamp": Any<String>,
  "type": "wNACk[QgaEuFPK",
  "userId": "wNACk[QgaEuFPK",
}
`;

exports[`Testing snapshot for Kameleoon's logEvent destination action: required fields 1`] = `
Object {
  "messageId": "wNACk[QgaEuFPK",
  "properties": Object {},
  "timestamp": Any<String>,
  "type": "wNACk[QgaEuFPK",
}
`;
